--- a/index.html
+++ b/index.html
@@ -10,27 +10,25 @@
    <meta name="description"
       content="En Galaxy, nos apasiona el gaming y la tecnología. Descubre un universo de posibilidades con nuestras consolas, juegos y gadgets. Encuentra productos innovadores que te sumergirán en la experiencia gamer definitiva.">
    <meta title="Explora el Universo Gamer en Galaxy: Consolas, Juegos y Más">
-   <link rel="icon" href="./img/favicon.png" type="image/x-icon">
+   <link rel="icon" href="./img/logo-galaxy-ai.ico" type="image/x-icon">
    <link rel="stylesheet" href="./css/estilos.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-   <!-- <link rel="stylesheet" href="./css/style.css"> -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
+   <div id="top"></div>
    <header>
 
       <!-- BARRA DE NAVEGACION -->
 
       <nav class="navbar navbar-expand-lg">
          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="./img/logo.png"
-                  alt="logo">Gala<span>XY</span> </a>
+            <a class="navbar-brand" href="index.html"><img class="logo" src="./img/logo-galaxy-ai.svg" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -41,9 +39,8 @@
                      <a class="nav-link" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="pages/productos.html" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">Productos
-                     </a>
+                     <a id="productos-link" class="nav-link dropdown-toggle" href="pages/productos.html" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                      <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="pages/consolas.html">Consolas</a></li>
                         <li><a class="dropdown-item" href="pages/joysticks.html">Joysticks</a></li>
@@ -275,8 +272,7 @@
 
    <footer>
       <div class="logo">
-         <img src="./img/logo.png" width="30px" height="35px" alt="logo">
-         <h6>Gala<span>XY</span> </h6>
+         <a href="#top"><img src="./img/logo-galaxy-ai.svg" width="300px" alt="logo"></a>
       </div>
       <div class="footer-container">
          <div class="iconos">
@@ -299,6 +295,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"></script>
+      
 </body>
 
 </html>
