--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,15 +5,19 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>GalaXY</title>
-   <link rel="shortcut icon" href="../img/logo.png">
+   <meta name="keywords"
+      content="juegos, consolas, tecnología gamer, gadgets gaming, tienda gamer, comprar juegos online, accesorios gaming, consolas de última generación, ofertas de juegos, experiencia gamer, entretenimiento tecnológico, equipamiento gaming, videojuegos, novedades gamer, acceso a avances tecnológicos">
+   <meta name="description"
+      content="En Galaxy, nos apasiona el gaming y la tecnología. Descubre un universo de posibilidades con nuestras consolas, juegos y gadgets. Encuentra productos innovadores que te sumergirán en la experiencia gamer definitiva.">
+   <meta title="Explora el Universo Gamer en Galaxy: Consolas, Juegos y Más">
+   <link rel="icon" href="../img/logo-galaxy-ai.ico" type="image/x-icon">
+   <link rel="stylesheet" href="../css/estilos.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-   <link rel="stylesheet" href="../css/estilos.css">
-   <!-- <link rel="stylesheet" href="../css/style.css"> -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -22,46 +26,44 @@
       <!-- BARRA DE NAVEGACION -->
 
       <nav class="navbar navbar-expand-lg">
-         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo.png"
-                  alt="logo">Gala<span>XY</span> </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
-               aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-               <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                  <li class="nav-item">
-                     <a class="nav-link" href="../index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                     <a class="nav-link dropdown-toggle" href="productos.html" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">Productos
-                     </a>
-                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="consolas.html">Consolas</a></li>
-                        <li><a class="dropdown-item" href="joysticks.html">Joysticks</a></li>
-                        <li>
-                           <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="juegos.html">Juegos</a></li>
-                     </ul>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="galeria.html">Galeria</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contacto.html">Contactanos</a>
-                  </li>
-               </ul>
-               <form class="d-flex" role="search">
-                  <input class="form-control m-1" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn" type="submit">Buscar</button>
-               </form>
-            </div>
+         <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo-galaxy-ai.svg" alt="logo"></a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+               <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Inicio</a>
+               </li>
+               <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="productos.html" role="button" data-bs-toggle="dropdown"
+                     aria-expanded="false">Productos
+                  </a>
+                  <ul class="dropdown-menu">
+                     <li><a class="dropdown-item" href="consolas.html">Consolas</a></li>
+                     <li><a class="dropdown-item" href="joysticks.html">Joysticks</a></li>
+                     <li>
+                        <hr class="dropdown-divider">
+                     </li>
+                     <li><a class="dropdown-item" href="juegos.html">Juegos</a></li>
+                  </ul>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="galeria.html">Galeria</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contactanos</a>
+               </li>
+            </ul>
+            <form class="d-flex" role="search">
+               <input class="form-control m-1" type="search" placeholder="Buscar" aria-label="Search">
+               <button class="btn" type="submit">Buscar</button>
+            </form>
+         </div>
          </div>
       </nav>
    </header>
@@ -74,26 +76,34 @@
                <H4>Quienes somos</H4>
             </div>
             <div class="parrafo">
-            <p>Nuestro equipo está compuesto por entusiastas de los videojuegos que conocen la importancia de encontrar
-               el equipo adecuado para cada jugador. Ya seas un veterano experimentado o un novato curioso, estamos aquí
-               para ayudarte a encontrar los dispositivos y juegos que se ajusten a tus preferencias y estilo de juego.
+               <p>Nuestro equipo está compuesto por entusiastas de los videojuegos que conocen la importancia de
+                  encontrar
+                  el equipo adecuado para cada jugador. Ya seas un veterano experimentado o un novato curioso, estamos
+                  aquí
+                  para ayudarte a encontrar los dispositivos y juegos que se ajusten a tus preferencias y estilo de
+                  juego.
 
-               Nos enorgullecemos de ofrecer un servicio excepcional, asesoramiento experto y una amplia gama de
-               productos que satisfacen todas las necesidades de nuestros clientes. Además, mantenemos nuestro catálogo
-               actualizado con las últimas novedades y tecnologías para que siempre tengas acceso a las mejores opciones
-               disponibles en el mercado.
+                  Nos enorgullecemos de ofrecer un servicio excepcional, asesoramiento experto y una amplia gama de
+                  productos que satisfacen todas las necesidades de nuestros clientes. Además, mantenemos nuestro
+                  catálogo
+                  actualizado con las últimas novedades y tecnologías para que siempre tengas acceso a las mejores
+                  opciones
+                  disponibles en el mercado.
 
-               Explora nuestra tienda en línea y descubre la magia de los videojuegos con nosotros. Estamos emocionados
-               de ser parte de tu viaje de entretenimiento y aventuras virtuales. Si tienes alguna pregunta o necesitas
-               asistencia, no dudes en ponerte en contacto con nuestro amable equipo de atención al cliente.
+                  Explora nuestra tienda en línea y descubre la magia de los videojuegos con nosotros. Estamos
+                  emocionados
+                  de ser parte de tu viaje de entretenimiento y aventuras virtuales. Si tienes alguna pregunta o
+                  necesitas
+                  asistencia, no dudes en ponerte en contacto con nuestro amable equipo de atención al cliente.
 
-               ¡Gracias por elegir Gala<span>XY</span> como tu destino para todo lo relacionado con los videojuegos!
-               Esperamos que encuentres la diversión y la emoción que buscas en cada experiencia de juego."
+                  ¡Gracias por elegir Gala<span>XY</span> como tu destino para todo lo relacionado con los videojuegos!
+                  Esperamos que encuentres la diversión y la emoción que buscas en cada experiencia de juego."
 
-               Recuerda que este párrafo es solo un punto de partida y puedes personalizarlo para reflejar la identidad
-               y la filosofía específica de tu tienda. Además, asegúrate de incluir información relevante sobre la
-               historia de la tienda, su misión y visión, y cualquier otro detalle que consideres importante para
-               conectar con tus clientes potenciales.</p>
+                  Recuerda que este párrafo es solo un punto de partida y puedes personalizarlo para reflejar la
+                  identidad
+                  y la filosofía específica de tu tienda. Además, asegúrate de incluir información relevante sobre la
+                  historia de la tienda, su misión y visión, y cualquier otro detalle que consideres importante para
+                  conectar con tus clientes potenciales.</p>
             </div>
          </div>
          <h2>¿DONDE ESTAMOS?</h2>
@@ -116,11 +126,8 @@
 
    <footer>
       <div class="logo">
-         <img src="../img/logo.png" width="30px" height="35px" alt="logo">
-         <h6>Gala<span>XY</span> </h6>
-
+         <a href="#top"><img src="../img/logo-galaxy-ai.svg" width="300px" alt="logo"></a>
       </div>
-
       <div class="footer-container">
          <div class="iconos">
             <a href="https://www.facebook.com" target="_blank">
